# obsplanparse-mk

./: README.md  obsplanparse_mk.py  pyproject.toml  test_input_1.txt  test_output_2.txt
obsplanparse-mk/obsplanparse/: obsplanparse_mk.py
obsplanparse-mk/txt_files/: observe_command_NEW1.txt  test_input_2.txt  test_input_3.txt  test_output_NEW3.txt
planrunner/: planrunner.py
txt_files/: line_parser.txt  observe_command.txt  observe_command_NEW1.txt  test_input_2.txt  test_input_3.txt  test_output_1.txt  test_output_2.txt  test_output_3.txt
