[tool.poetry]
name = "obsplanparse-mk"
version = "0.1.0"
description = ""
authors = ["MMiirrkk <mirekkic@gmail.com>"]
readme = "README.md"
packages = [{include = "obsplanparse_mk"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
