[tool.poetry]
name = "obsplanparse-mk"
version = "0.1.0"
description = ""
authors = ["MMiirrkk <cot@wp.pl>"]
readme = "README.md"
packages = [{include = "obsplanparse_mk"}]

[tool.poetry.dependencies]
python = "^3.10"
lark = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
